--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/leap-day@v0.2.0
 title: Matt's homepage
 description: Bookmark this to keep an eye on my project updates!
